--- a/src/style/scss/_global.scss
+++ b/src/style/scss/_global.scss
@@ -4,6 +4,21 @@
   box-sizing: border-box;
 }
 
+body{
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+}
+
+
+.container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
 h1, h2 {
   margin: 0;
 }
@@ -21,5 +36,4 @@ a {
 
 img {
   display: block;
-  width: 100%;
 }
