--- a/src/style/scss/blocks/hero.scss
+++ b/src/style/scss/blocks/hero.scss
@@ -9,6 +9,7 @@
     line-height: 67px;
     letter-spacing: -4px;
     padding-bottom: 16px;
+    color: $black;
   }
 
   &__text{
@@ -38,6 +39,10 @@
     padding-top: 17px;
     border-radius: 40px;
     color: white;
+
+    &:hover{
+      background-color: $black;
+    }
   }
 
   &__link-playmarket{
@@ -52,5 +57,11 @@
     position: absolute;
     bottom: -65px;
     right: 0;
+  }
+
+  &__circle{
+    position: absolute;
+    bottom: -105px;
+    right: 242px;
   }
 }
