--- a/src/style/scss/main.scss
+++ b/src/style/scss/main.scss
@@ -2,3 +2,7 @@
 @import "global";
 @import "blocks/header";
 @import "blocks/hero";
+@import "blocks/store";
+@import "blocks/categories";
+@import "blocks/brands";
+@import "blocks/why-rhythm";
