--- a/src/style/scss/_global.scss
+++ b/src/style/scss/_global.scss
@@ -9,6 +9,7 @@ body{
   padding: 0;
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
+
 }
 
 
@@ -36,4 +37,8 @@ a {
 
 img {
   display: block;
+}
+
+.orange-text{
+  color: $orange;
 }
