--- a/src/style/scss/main.scss
+++ b/src/style/scss/main.scss
@@ -6,3 +6,6 @@
 @import "blocks/categories";
 @import "blocks/brands";
 @import "blocks/why-rhythm";
+@import "blocks/testimonials";
+@import "blocks/app";
+@import "blocks/footer";
