--- a/src/style/scss/blocks/_categories.scss
+++ b/src/style/scss/blocks/_categories.scss
@@ -21,12 +21,26 @@
   }
 
   &__link{
-
     position: relative;
+  }
 
+  &__image{
     &:hover{
       filter: brightness(.75);
       transition: ease-in-out 0.3s;
     }
+  }
+
+  &__link-title{
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 20px 30px;
+    font-weight: 600;
+    font-size: 20px;
+    color: white;
+    width: 100%;
+    z-index: 2;
   }
 }
