--- a/src/style/scss/blocks/_categories.scss
+++ b/src/style/scss/blocks/_categories.scss
@@ -2,6 +2,10 @@
 
   padding-bottom: 220px;
 
+  @include breakpoint('xs') {
+    padding-bottom: 150px;
+  }
+
   &__title-holder{
     text-align: center;
   }
@@ -11,6 +15,10 @@
     font-size: 44px;
     padding-bottom: 80px;
     color: $black;
+
+    @include breakpoint('xs') {
+      font-size: 24px;
+    }
   }
 
   &__holder{
@@ -18,6 +26,18 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 70px;
+
+
+    @include breakpoint('lg') {
+      width: 65%;
+      margin: 0 auto;
+      gap: 45px;
+    }
+
+    @include breakpoint('lg') {
+      width: 65%;
+      margin: 0 auto;
+    }
   }
 
   &__link{
