--- a/src/style/scss/blocks/_brands.scss
+++ b/src/style/scss/blocks/_brands.scss
@@ -1,12 +1,21 @@
 .brands{
 
   padding-bottom: 180px;
+
+  @include breakpoint('xs') {
+    padding-bottom: 100px;
+  }
+
   &__title{
     font-weight: 600;
     font-size: 44px;
     padding-bottom: 96px;
     color: $black;
     text-align: center;
+
+    @include breakpoint('xs') {
+      font-size: 24px;
+    }
   }
 
   &__column{
@@ -15,6 +24,17 @@
     justify-content: center;
     gap: 190px;
     padding-bottom: 80px;
+
+    @include breakpoint('xs') {
+      width: 50%;
+      padding-bottom: 80px;
+      margin: 0 auto;
+    }
+
+    @include breakpoint('lg') {
+      gap: 75px;
+      padding-bottom: 0;
+    }
   }
 
   &__image-gretch{
