--- a/src/style/scss/blocks/_testimonials.scss
+++ b/src/style/scss/blocks/_testimonials.scss
@@ -3,6 +3,18 @@
   padding-top: 140px;
   padding-bottom: 375px;
 
+  @include breakpoint('xs') {
+    padding-bottom: 100px;
+  }
+
+  @include breakpoint('lg') {
+    padding-bottom: 150px;
+  }
+
+  @include breakpoint('xl') {
+    padding-bottom: 150px;
+  }
+
   &__title-holder{
     text-align: center;
     padding-bottom: 90px;
@@ -13,16 +25,36 @@
     font-size: 44px;
     padding-bottom: 80px;
     color: $black;
+
+    @include breakpoint('xs') {
+      font-size: 24px;
+    }
+
+    @include breakpoint('md') {
+      padding-bottom: 30px;
+    }
   }
 
   &__holder{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    @include breakpoint('md') {
+     justify-content: center;
+    }
   }
 
   &__image-holder{
     position: relative;
+
+    @include breakpoint('md') {
+      padding: 55px;
+    }
+
+    @include breakpoint('lg') {
+      padding-left: 30px;
+    }
   }
 
   &__element{
@@ -31,22 +63,48 @@
     border-radius: 40px 0 400px 400px;
     transform: rotate(-7.72deg);
     background-color: $orange;
+
+    @include breakpoint('xs') {
+     display: none;
+    }
+
+    @include breakpoint('lg') {
+      padding-left: 30px;
+    }
   }
 
   &__photo{
     position: absolute;
     top: -31px;
     left: 63px;
+
+    @include breakpoint('xs') {
+      top: -90px;
+      left: -99px;
+      width: 250px;
+    }
+
+    @include breakpoint('lg') {
+      padding-left: 30px;
+    }
   }
 
   &__content-holder{
     max-width: 525px;
+
+    @include breakpoint('xs') {
+      padding-top: 80px;
+    }
   }
 
   &__text{
     font-size: 24px;
     line-height: 160%;
     color: $grey;
+
+    @include breakpoint('lg') {
+      font-size: 18px;
+    }
   }
 
   &__name{
@@ -54,6 +112,10 @@
     font-size: 24px;
     color: $black;
     padding-bottom: 8px;
+
+    @include breakpoint('lg') {
+      font-size: 18px;
+    }
   }
 
   &__profile{
