--- a/src/style/scss/blocks/_why-rhythm.scss
+++ b/src/style/scss/blocks/_why-rhythm.scss
@@ -1,7 +1,11 @@
 .why-rhythm{
 
   background-color: $black;
-  max-height: 508px;
+  max-height: 950px;
+
+  @include breakpoint('xs') {
+    font-size: 24px;
+  }
 
   &__title{
     font-weight: 600;
@@ -10,6 +14,10 @@
     color: white;
     text-align: center;
     padding-top: 93px;
+
+    @include breakpoint('xs') {
+      font-size: 24px;
+    }
   }
 
   &__column-holder{
@@ -17,10 +25,29 @@
     flex-wrap: wrap;
     gap: 220px;
     padding-bottom: 95px;
+
+    @include breakpoint('md') {
+      gap: 25px;
+      justify-content: center;
+    }
+
+    @include breakpoint('lg') {
+      gap: 25px;
+      justify-content: center;
+    }
+
+    @include breakpoint('xl') {
+      gap: 25px;
+      justify-content: center;
+    }
   }
 
   &__column{
     max-width: 230px;
+
+    @include breakpoint('xs') {
+      padding-bottom: 20px;
+    }
   }
 
   &__icon-holder{
@@ -46,6 +73,10 @@
     padding-bottom: 12px;
     text-align: center;
     text-transform: uppercase;
+
+    @include breakpoint('lg') {
+      font-size: 14px;
+    }
   }
 
   &__text{
